--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Rent Bike - Find and rent bikes in your city" />
-    <title>Rent Bike</title>
+    <meta name="description" content="Rent Bike - Find and rent bikes in your city. Affordable, flexible, and convenient bike rentals in Indore, Bhopal, Mumbai, Goa, Haldwani, Kathgodam, Pithoragarh, Dehradun, and more. Book your ride today!" />
+    <meta name="keywords" content="bike rental, rent bike, city bike rental, affordable bike hire, flexible rental, Indore, Bhopal, Mumbai, Goa, Haldwani, Kathgodam, Pithoragarh, Dehradun, scooter rental, electric bike, mountain bike, daily rental, hourly rental, monthly rental, local bike owners" />
+    <meta name="author" content="Rent Bike" />
+    <link rel="canonical" href="https://yourdomain.com/" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Rent Bike - Affordable Bike Rentals in Your City" />
+    <meta property="og:description" content="Find and rent bikes in your city with Rent Bike. Lowest prices, flexible plans, and a wide range of bikes. Book online in Indore, Bhopal, Mumbai, Goa, and more." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/bike-banner-1.jpeg" />
+    <meta property="og:site_name" content="Rent Bike" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rent Bike - Affordable Bike Rentals in Your City" />
+    <meta name="twitter:description" content="Find and rent bikes in your city with Rent Bike. Lowest prices, flexible plans, and a wide range of bikes. Book online in Indore, Bhopal, Mumbai, Goa, and more." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/bike-banner-1.jpeg" />
+    <meta name="twitter:site" content="@YourTwitterHandle" />
+    <title>Rent Bike - Affordable Bike Rentals in Your City | Book Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
