SEO fix for main home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/bike-rent-logo-2.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/bike-rent-logo-2.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/bike-rent-logo-2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FDB813" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="msapplication-TileColor" content="#FDB813" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/images/bike-rent-logo-2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Preload critical resources - only in production builds -->
@@ -14,7 +18,8 @@
     <!-- Base tag to ensure correct asset paths -->
     <base href="%PUBLIC_URL%/" />
     
-    <title>BookYourRide - Best Bike Rental Service in Uttarakhand</title>
+    <title>Book Your Taxi, Bike & Tour Packages | BookyourRide.Com</title>
+    <meta name="description" content="Book taxis, bikes, and custom tour packages with transparent pricing, 24/7 support, and easy online booking at BookyourRide.com. Reserve now." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
