--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <!-- Base tag to ensure correct asset paths -->
     <base href="%PUBLIC_URL%/" />
     
-    <title>Book Your Taxi, Bike & Tour Packages | BookyourRide.Com</title>
-    <meta name="description" content="Book taxis, bikes, and custom tour packages with transparent pricing, 24/7 support, and easy online booking at BookyourRide.com. Reserve now." />
+    <title>Book Your Taxi, Bike & Tour Packages | BookyourRide.in</title>
+    <meta name="description" content="Book taxis, bikes, and custom tour packages with transparent pricing, 24/7 support, and easy online booking at BookyourRide.in. Reserve now." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
